--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -42,6 +42,19 @@
 
 <button></button>
 <script>
+  const divs = document.querySelectorAll('div');
+
+  function logText(e){
+    console.log(this.classList.value);
+    //this basically means stop bubbling up
+    e.stopPropagation();
+  }
+
+  //capture is from top to bottom, and bubbling is from bottom to top
+  divs.forEach(div => div.addEventListener('click', logText, {capture: false}));
+
+
+
 
 </script>
 </body>
